# trading-hooks-risc0

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  foundry.toml  rust-toolchain.toml
.github/actions/bininstall-risc0/: action.yml
.github/workflows/: linear.yml  main.yml
.vim/: coc-settings.json
apps/: Cargo.toml
apps/src/: main.rs
contracts/scripts/: Deploy.s.sol
contracts/src/: ComplianceHook.sol  EvenNumber.sol  IComplianceHook.sol  IEvenNumber.sol
contracts/test/: ComplianceHook.sol  EvenNumber.t.sol
docs/: host.md
guests/: Cargo.toml  build.rs
guests/compliance/: Cargo.toml
guests/compliance/src/: main.rs
guests/is-even/: Cargo.toml
guests/is-even/src/: main.rs
guests/tests/: compliance.rs  is-even.rs
