[workspace]
resolver = "2"
members = ["apps", "guests"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Intra-workspace dependencies
guests = { path = "./guests" }

# boundless monorepo dependencies.
boundless-market = { version = "1.0" }

# risc0 monorepo dependencies.
risc0-build = { version = "3.0.3", features = ["docker"] }
risc0-zkvm = { version = "3.0.3", default-features = false }

# risc0-ethereum dependencies.
risc0-build-ethereum = { version = "3.0.1" }
risc0-ethereum-contracts = { version = "3.0.1" }

alloy = { version = "1.0" }
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }
anyhow = { version = "1.0" }
bincode = { version = "1.3" }
bytemuck = { version = "1.16" }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
hex = { version = "0.4" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
sha2 = { version = "0.10" }
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[profile.release]
debug = 1
lto = "thin"
