[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy = { workspace = true, features = ["sol-types", "signers", "signer-local"] }
anyhow = { workspace = true }
boundless-market = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
guests = { workspace = true }
risc0-zkvm = { workspace = true, default-features = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
