[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }

[build-dependencies]
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }

[package.metadata.risc0]
methods = ["is-even"]
